--- a/Predict_Notebook.ipynb
+++ b/Predict_Notebook.ipynb
@@ -4672,23 +4672,25 @@
         "colab": {}
       },
       "source": [
-        "def similar_movies(movie_name,rating):\n",
+        "def find_movies(movie1,movie2,movie3):\n",
         "\n",
-        "  '''This function takes in a movie and the rating \n",
-        "      you have given to it then suggest 10 movies you \n",
-        "      might like based on the your rating'''\n",
+        "  '''This function takes in a 3 movie and \n",
+        "  suggest 10 movies you might like based \n",
+        "  on the similarities they have with the \n",
+        "  movies you given to it'''\n",
         "      \n",
-        "  def find_similar(movie_name,rating):\n",
-        "    score = similarity_df[movie_name]*(rating-2.5)\n",
+        "  def find_similar(movie_name):\n",
+        "    score = similarity_df[movie_name]\n",
         "    score = score.sort_values(ascending = False)\n",
         "    return score\n",
-        "  #Finally recommending a new movie\n",
+        "  movies = [movie1,movie2,movie3]\n",
         "  similar_movies = pd.DataFrame()\n",
-        "  similar_movies = similar_movies.append(find_similar(movie_name,rating))\n",
+        "  for movie in movies:\n",
+        "      similar_movies = similar_movies.append(find_similar(movie))\n",
         "  similar_movies.head(10)\n",
-        "  return pd.DataFrame(similar_movies.sum().sort_values(ascending=False).head(11)).drop(0,axis=1)[1:]\n"
+        "  return pd.DataFrame(similar_movies.sum().sort_values(ascending=False).head(13)).drop(0,axis=1)[3:]\n"
       ],
-      "execution_count": 145,
+      "execution_count": 161,
       "outputs": []
     },
     {
@@ -4700,12 +4702,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 331
         },
-        "outputId": "2e936199-75b1-4299-d4bb-ee1aec9a953b"
+        "outputId": "6705048e-3878-4b2e-f011-6aecccd61612"
       },
       "source": [
-        "similar_movies('10 Cloverfield Lane',5)"
+        "#finally make the predictions\n",
+        "find_movies('10 Cloverfield Lane','10 Cloverfield Lane','In Bruges')"
       ],
-      "execution_count": 146,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4733,7 +4736,22 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
+              "      <th>Curse of the Demon (Night of the Demon)</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Golden Bowl, The</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
               "      <th>Harry Potter and the Goblet of Fire</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Cry, the Beloved Country</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Big Fish</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Gattaca</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Black Hole, The</th>\n",
@@ -4747,21 +4765,6 @@
               "    <tr>\n",
               "      <th>Audition (Ôdishon)</th>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>White Nights</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Peculiarities of the National Fishing (Osobennosti natsionalnoy rybalki)</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Waiting...</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Freeway</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Eagle Eye</th>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
@@ -4769,13 +4772,13 @@
             "text/plain": [
               "Empty DataFrame\n",
               "Columns: []\n",
-              "Index: [Harry Potter and the Goblet of Fire, Black Hole, The, Ivan's Childhood (a.k.a. My Name is Ivan) (Ivanovo detstvo), $9.99, Audition (Ôdishon), White Nights, Peculiarities of the National Fishing (Osobennosti natsionalnoy rybalki), Waiting..., Freeway, Eagle Eye]"
+              "Index: [Curse of the Demon (Night of the Demon), Golden Bowl, The, Harry Potter and the Goblet of Fire, Cry, the Beloved Country, Big Fish, Gattaca, Black Hole, The, Ivan's Childhood (a.k.a. My Name is Ivan) (Ivanovo detstvo), $9.99, Audition (Ôdishon)]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 146
+          "execution_count": 163
         }
       ]
     },
